--- a/3/ClientPortal.Web/ClientPortal.Web/Web.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.config
@@ -6,7 +6,8 @@
   </configSections>
   <connectionStrings>
     <add name="CakeContext" connectionString="metadata=res://*/Contexts.Cake.csdl|res://*/Contexts.Cake.ssdl|res://*/Contexts.Cake.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=Cake;User Id=sa;Password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DefaultConnection" connectionString="data source=.;initial catalog=ClientPortal;User Id=sa;Password=sp0ngbOb;" providerName="System.Data.SqlClient" />
+    <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="data source=biz2\da;initial catalog=ClientPortal;User Id=sa;Password=sp0ngbOb;" providerName="System.Data.SqlClient" />
     <add name="CakeExtracterContext" connectionString="data source=biz2\da;initial catalog=CakeExtract;User Id=sa;Password=sp0ngbOb;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
