--- a/3/ClientPortal.Web/ClientPortal.Web/packages.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Blackbird" version="1.4" targetFramework="net45" />
   <package id="CsvHelper" version="1.17.0" targetFramework="net45" />
   <package id="DotNetOpenAuth.AspNet" version="4.0.3.12153" targetFramework="net45" />
   <package id="DotNetOpenAuth.Core" version="4.0.3.12153" targetFramework="net45" />
@@ -31,6 +32,8 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="MiniProfiler" version="2.1.0" targetFramework="net45" />
+  <package id="MiniProfiler.EF" version="2.1.0" targetFramework="net45" />
   <package id="Modernizr" version="2.5.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
