sycher, scheduler, miniprofiler, blackbird

--- a/3/CakeExtracter/CakeExtracter/App.config
+++ b/3/CakeExtracter/CakeExtracter/App.config
@@ -6,6 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="data source=.;initial catalog=ClientPortal;User Id=sa;Password=sp0ngbOb;" providerName="System.Data.SqlClient" />
+    <add name="CakeContext" connectionString="metadata=res://*/Contexts.Cake.csdl|res://*/Contexts.Cake.ssdl|res://*/Contexts.Cake.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Cake;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="UseCache" value="true" />
