--- a/3/ClientPortal.Web/ClientPortal.Web/Web.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.config
@@ -19,7 +19,7 @@
     
     <add key="UseMiniProfiler" value="true" />
     <add key="UseBlackbird" value="true" />
-    <add key="UseNullDatabaseInitializer" value="false" />
+    <add key="UseNullDatabaseInitializer" value="true"  />
 
   </appSettings>
   <system.web>
@@ -30,7 +30,7 @@
     </compilation>
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+      <forms loginUrl="~/Account/Login" timeout="7200" />
     </authentication>
     <pages>
       <namespaces>
@@ -43,6 +43,7 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <sessionState timeout="7200" />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
