--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -402,6 +402,7 @@
     <Content Include="Global.asax" />
     <Content Include="humans.txt" />
     <Content Include="Images\avatar.png" />
+    <Content Include="Images\da.jpeg" />
     <Content Include="Images\logo1.png" />
     <Content Include="robots.txt" />
     <Content Include="Scripts\blackbird.js" />
