--- a/3/ClientPortal.Web/ClientPortal.Web/packages.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="2.2.1" targetFramework="net45" />
   <package id="Blackbird" version="1.4" targetFramework="net45" />
   <package id="CsvHelper" version="1.17.0" targetFramework="net45" />
   <package id="DotNetOpenAuth.AspNet" version="4.0.3.12153" targetFramework="net45" />
