demo account seed

--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -416,6 +416,7 @@
     <Content Include="Images\logoAHS.png" />
     <Content Include="Images\logoITT.png" />
     <Content Include="Images\logoLT.png" />
+    <Content Include="Images\logoSelectQuote.png" />
     <Content Include="robots.txt" />
     <Content Include="Scripts\blackbird.js" />
     <Content Include="Scripts\foundation\app.js" />
