--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -210,6 +210,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Models\DashboardModel.cs" />
+    <Compile Include="Models\ExportModels.cs" />
     <Compile Include="Models\FileUploadInfo.cs" />
     <Compile Include="Models\GoalsModel.cs" />
     <Compile Include="Models\GoalVM.cs" />
