--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InvoicesController.cs" />
     <Compile Include="Controllers\ReportsController.cs" />
+    <Compile Include="Controllers\ScheduledReportsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -223,6 +224,7 @@
     <Compile Include="Models\IndexModel.cs" />
     <Compile Include="Models\QuickBooksModels.cs" />
     <Compile Include="Models\ReportModel.cs" />
+    <Compile Include="Models\ScheduledReportVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seeder.cs" />
   </ItemGroup>
@@ -1510,6 +1512,10 @@
     <Content Include="Views\Home\DashboardGoals.cshtml" />
     <Content Include="Views\Shared\_ClicksByDevice.cshtml" />
     <Content Include="Views\Shared\_MainContacts.cshtml" />
+    <Content Include="Views\ScheduledReports\Index.cshtml" />
+    <Content Include="Views\ScheduledReports\List.cshtml" />
+    <Content Include="Views\ScheduledReports\_Infrastructure.cshtml" />
+    <Content Include="Views\ScheduledReports\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
