--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Models\ContactVM.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CPController.cs" />
     <Compile Include="Controllers\ExportController.cs" />
     <Compile Include="Controllers\FilesController.cs" />
     <Compile Include="Controllers\GoalsController.cs" />
@@ -225,6 +226,7 @@
     <Compile Include="Models\QuickBooksModels.cs" />
     <Compile Include="Models\ReportModel.cs" />
     <Compile Include="Models\ScheduledReportVM.cs" />
+    <Compile Include="Models\UserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seeder.cs" />
   </ItemGroup>
