move FileUpload to CPContext/Repo; implement delete; +misc

--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -115,6 +115,9 @@
     <Compile Include="Contexts\EmailStatus.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
+    <Compile Include="Contexts\FileUpload.cs">
+      <DependentUpon>ClientPortal.tt</DependentUpon>
+    </Compile>
     <Compile Include="Contexts\GeneratedReport.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
