--- a/2/LendingTree/LTWeb.Common/LTWeb.Common.csproj
+++ b/2/LendingTree/LTWeb.Common/LTWeb.Common.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -65,6 +66,10 @@
     <Compile Include="Migrations\201303081919294_m1.Designer.cs">
       <DependentUpon>201303081919294_m1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201306052035223_m2.cs" />
+    <Compile Include="Migrations\201306052035223_m2.Designer.cs">
+      <DependentUpon>201306052035223_m2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\LTRequest.cs" />
@@ -85,6 +90,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201303081919294_m1.resx">
       <DependentUpon>201303081919294_m1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201306052035223_m2.resx">
+      <DependentUpon>201306052035223_m2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
