--- a/2/LendingTree/LTWeb/Web.config
+++ b/2/LendingTree/LTWeb/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="LTWebDataContext" connectionString="data source=.;initial catalog=LTWeb;User=sa;Password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="LTWebDataContextForWebService" connectionString="data source=.;initial catalog=LTWebService;User=sa;Password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
