--- a/3/ClientPortal.Web/ClientPortal.Web/packages.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/packages.config
@@ -36,6 +36,7 @@
   <package id="MiniProfiler" version="2.1.0" targetFramework="net45" />
   <package id="MiniProfiler.EF" version="2.1.0" targetFramework="net45" />
   <package id="Modernizr" version="2.5.3" targetFramework="net45" />
+  <package id="morelinq" version="1.0.16006" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
   <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net45" />
