--- a/3/ClientPortal.Web/packages/repositories.config
+++ b/3/ClientPortal.Web/packages/repositories.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\CakeExtracter\CakeExtracter\packages.config" />
   <repository path="..\..\ClientPortal.Data\packages.config" />
-  <repository path="..\..\ClientPortal.Entities\packages.config" />
   <repository path="..\..\DirectAgents.Mvc\packages.config" />
   <repository path="..\..\QuickBooks.WebConnector\packages.config" />
   <repository path="..\..\QuickBooks\packages.config" />
