--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -127,10 +127,10 @@
     <Compile Include="Contexts\Goal.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
-    <Compile Include="Contexts\GoalType.cs">
+    <Compile Include="Contexts\GoalMetric.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
-    <Compile Include="Contexts\Metric.cs">
+    <Compile Include="Contexts\GoalType.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
     <Compile Include="Contexts\MonthlySummary.cs">
