--- a/3/ClientPortal.Web/ClientPortal.Web/packages.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/packages.config
@@ -11,6 +11,7 @@
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.0.3.12153" targetFramework="net45" />
   <package id="DynamicQuery" version="1.0" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
+  <package id="EntityFramework.Extended" version="5.0.0.73" targetFramework="net45" />
   <package id="Foundation3_Core" version="3.2.5" targetFramework="net45" />
   <package id="Foundation3_MVC4" version="3.0.325" targetFramework="net45" />
   <package id="jQuery" version="1.8.3" targetFramework="net45" />
