move Channel Perf to its own tab

--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -1529,6 +1529,7 @@
     <Content Include="Views\SearchHome\Index.cshtml" />
     <Content Include="Views\SearchHome\Dashboard.cshtml" />
     <Content Include="Views\SearchHome\CampaignPerf.cshtml" />
+    <Content Include="Views\SearchHome\ChannelPerf.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
