--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Controllers\ReportsController.cs" />
     <Compile Include="Controllers\ScheduledReportsController.cs" />
     <Compile Include="Controllers\SearchHomeController.cs" />
+    <Compile Include="Controllers\SearchReportsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
